Update to modern NetworkX accessors, update Gitignore

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = takahe3
-author = Ben Montgomery, Florian Boudin
+author = Florian Boudin, Ben Montgomery
 summary = Multi-sentence compression package
 license = MIT
 description-file =
